# xpulse_recon

./: .gitignore  .gitmodules  CMakeLists.txt  EXTERNAL_LICENSES.md  README.md
src/: CMakeLists.txt  main.cpp  reconstruction.hpp
src/reconstruction/: dataset.hpp  gpu.hpp  reconstruction_abs.hpp  reconstruction_autopag.hpp  reconstruction_chunk.hpp  reconstruction_hartmann.hpp  reconstruction_ipr.hpp  reconstruction_lpla.hpp  reconstruction_lplh.hpp  reconstruction_lpln.hpp  reconstruction_n.hpp
src/reconstruction/dataset/: data_loader.hpp  geometry.hpp  geometry_chunk.hpp  image_fxp.hpp  parameters.hpp
src/reconstruction/dataset/parameters/: global_parameters.hpp  specialized_parameters.hpp
src/reconstruction/gpu/: context.hpp  error.hpp  kernel.hpp  kernel_recon.hpp  kernel_recon_str.hpp  program.hpp
src/reconstruction/gpu/kernels/: KernelBackward.cl  KernelBackwardH.cl  KernelError.cl  KernelForward.cl  KernelForwardH.cl  constants.cl  utils.cl
src/reconstruction/gpu/kernels/headers/: KernelBackward.hpp  KernelError.hpp  KernelForward.hpp
